--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.2",
     "clsx": "^1.2.1",
     "country-state-city": "^3.1.2",
+    "framer-motion": "^10.16.0",
     "lucide-react": "^0.263.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
